refactor: 테스트 명시성을 위한 Lotto 생성자 추가 - 생성자 체이닝을 통한 유지보수/가독성 향상